--- a/scripts/bandits_persuasion.ipynb
+++ b/scripts/bandits_persuasion.ipynb
@@ -4,22 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MS&E 234 Project Poking\n",
+    "# CS 234 Project\n",
     "\n",
     "Test sandbox for persuasion bandits.\n",
-    "\n",
-    "## Introduction\n",
-    "\n",
-    "Bayesian persuasion is a theoretical framework for understanding the impact of information provision on the actions of a rational actor (KG2011). More generally, Bayesian persuasion is part of a growing literature on information design, which studies how an \"information designer\" can influence the optimal behaviour of rational actors to achieve a desired objective.\n",
-    "\n",
-    "I thought this meshed with two of the papers we talked about in class:\n",
-    "\n",
-    "- (White & Horvitz 2010) A sort-of-null result about the impact of Google searches on beliefs\n",
-    "- (Dandekar, Goel, & Lee 2012) Provided theoretical results about the conditions under which certain recommendation algorithms could be polarizing.\n",
-    "\n",
-    "More generally, I'm interested in thinking about the internet as an information environment on individuals' beliefs. Much of the internet can be characterized as an _information economy_ and there are thus natural (and important) questions to ask about the impact of this environment's design. We can ask questions like: to what extent can the internet be used to manipulate people's behaviour? How successful can advertising companies be in persuading customers to buy their products? Can fake news swing an election?\n",
-    "\n",
-    "These are big questions, but I thought the (KG2011) framework of Bayesian persuasion could be an interesting model to use. Most of the papers about Bayesian persuasion are theoretical in nature, and explore the dynamics of different extensions to the base model (multiple senders, costly signals, multiple receivers, etc.). In the spirit of thinking about information design in a fully online setting, I wanted to see if a multi-armed bandit could learn an optimal policy to influence the behaviour of rational agents. \n",
     "\n",
     "## Bayesian Persuasion: An Overview\n",
     "\n",
